# quaternions

./: CMakeLists.txt  README.md
quaternions/: quaternion.cpp  quaternion.h  quaternion.test.cpp  xyz.cpp  xyz.h  xyz.test.cpp
test/: helpers.cpp  helpers.h
